# DownloadVimeo-Rust-Implementation

./: .gitignore  LICENSE
download_vimeo/: Cargo.toml
download_vimeo/src/: lib.rs  main.rs  network.rs
download_vimeo/src/commandline/: parser.rs
download_vimeo/src/model/: model.rs
download_vimeo/src/network/: fetch_metadata.rs  fetch_segment.rs  network.rs
